[package]
name = "Fasching"
description = "Track Filesystem Integrity via 'Snapshots' containing hash of all files within specified directories."
version = "0.1.14"
edition = "2021"
authors = ["james@koonts.net"]
license = "MIT"
repository = "https://github.com/helloimalemur/fasching"
keywords = ["file-integrity", "filesystem-integirty", "file-hashing", "folder-hashing", "filesystem-hashing"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.5.0"
sha3 = "0.11.0-pre.3"
bytes = "1.5.0"
rand = "0.9.0-alpha.0"
md5 = "0.7.0"
log = "0.4.21"
blake3 = "1.5.1"
chrono = "0.4.35"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
