[package]
name = "filesystem-hashing"
description = "Track Filesystem Integrity via 'Snapshots' containing hash of all files within specified directories."
version = "0.2.4"
edition = "2021"
authors = ["james@koonts.net"]
license = "MIT"
repository = "https://github.com/helloimalemur/filesystem-hashing"
keywords = ["file-integrity", "filesystem-integirty", "file-hashing", "folder-hashing", "filesystem-hashing"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.5.0"
sha3 = "0.11.0-pre.3"
bytes = "1.6.0"
rand = "0.9.0-alpha.1"
md5 = "0.7.0"
log = "0.4.21"
blake3 = "1.5.1"
chrono = "0.4.37"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
anyhow = "1.0.81"
thiserror = "1.0.58"
